--- a/shopping-agent/pyproject.toml
+++ b/shopping-agent/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.13"
 dependencies = [
     "openai-agents>=0.2.9",
     "python-dotenv>=1.1.1",
+    "requests>=2.32.5",
+    "rich>=14.1.0",
 ]
